Bug fix and added increase in order size

--- a/clone-front/public/index.html
+++ b/clone-front/public/index.html
@@ -13,8 +13,8 @@
     <!-- Required meta tags-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="cloned">
-    <meta name="author" content="Magnito adi-cloner">
+    <meta name="description" content="Algo trading bot project. Still in development mode.">
+    <meta name="author" content="Magnito Imore">
     <meta name="keywords" content="binancebot, bittrexbot, binance trading bot, bittrex trading bot, binance trader, bittrex trader, algotrader">
 
     <!-- Fontfaces CSS-->
